@@ -1,9 +1,15 @@
 package com.example.socialmeet.config;
 
+import com.example.socialmeet.filter.JwtAuthenticationFilter;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -14,77 +20,88 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 /**
- * 安全配置
+ * Spring Security配置类
  */
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
+    
+    @Autowired
+    private JwtAuthenticationFilter jwtAuthenticationFilter;
+    
+    @Autowired
+    private JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
     
     /**
      * 密码编码器
      */
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder(12); // 提高加密强度
+        return new BCryptPasswordEncoder(12);
     }
     
     /**
-     * 安全过滤器链
+     * 认证管理器
+     */
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
+    }
+    
+    /**
+     * 安全过滤器链配置
      */
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http
-            // 禁用CSRF（API服务通常不需要）
-            .csrf(csrf -> csrf.disable())
+        // 禁用CSRF（因为使用JWT）
+        http.csrf(AbstractHttpConfigurer::disable);
+        
+        // 启用CORS
+        http.cors(cors -> cors.configurationSource(corsConfigurationSource()));
+        
+        // 设置session为无状态
+        http.sessionManagement(session -> 
+            session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+        );
+        
+        // 设置未授权处理
+        http.exceptionHandling(exception -> 
+            exception.authenticationEntryPoint(jwtAuthenticationEntryPoint)
+        );
+        
+        // 设置权限规则
+        http.authorizeHttpRequests(auth -> {
+            // 公开接口 - 不需要认证
+            auth.requestMatchers(
+                "/api/auth/**",
+                "/api/public/**",
+                "/api/health",
+                "/api/database/test",
+                "/api/wealth-level/ranking",
+                "/api/wealth-level/rules",
+                "/api/lucky-numbers/items",  // 靓号列表接口 - 公开访问
+                "/api/shop/items",           // 商品列表接口 - 公开访问
+                "/api/shop/categories",      // 商品分类接口 - 公开访问
+                "/swagger-ui/**",
+                "/swagger-ui.html",
+                "/api-docs/**",
+                "/v3/api-docs/**",
+                "/swagger-resources/**",
+                "/webjars/**",
+                "/favicon.ico",
+                "/error"
+            ).permitAll();
             
-            // 配置CORS
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            
-            // 配置会话管理
-            .sessionManagement(session -> session
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-            )
-            
-            // 配置授权规则
-            .authorizeHttpRequests(auth -> auth
-                // 公开接口
-                .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers("/api/public/**").permitAll()
-                .requestMatchers("/api/phone/**").permitAll()  // 手机验证码接口
-                .requestMatchers("/api/admin/database/fix/**").permitAll()  // 数据库修复接口
-                .requestMatchers("/api/health").permitAll()  // 健康检查接口
-                .requestMatchers("/api/auth/third-party/alipay/callback").permitAll()  // 支付宝认证回调
-                .requestMatchers("/api/auth/third-party/wechat/callback").permitAll()  // 微信认证回调
-                .requestMatchers("/api/test/**").permitAll()  // 测试接口
-                .requestMatchers("/swagger-ui/**").permitAll()
-                .requestMatchers("/api-docs/**").permitAll()
-                .requestMatchers("/actuator/health").permitAll()
-                
-                // 需要认证的接口
-                .requestMatchers("/api/users/**").authenticated()
-                .requestMatchers("/api/dynamics/**").authenticated()
-                .requestMatchers("/api/calls/**").authenticated()
-                .requestMatchers("/api/messages/**").authenticated()
-                
-                // 其他请求需要认证
-                .anyRequest().authenticated()
-            )
-            
-            // 配置异常处理
-            .exceptionHandling(exceptions -> exceptions
-                .authenticationEntryPoint((request, response, authException) -> {
-                    response.setStatus(401);
-                    response.setContentType("application/json");
-                    response.getWriter().write("{\"error\":\"未授权访问\",\"code\":401}");
-                })
-                .accessDeniedHandler((request, response, accessDeniedException) -> {
-                    response.setStatus(403);
-                    response.setContentType("application/json");
-                    response.getWriter().write("{\"error\":\"访问被拒绝\",\"code\":403}");
-                })
-            );
+            // 所有其他请求需要认证
+            auth.anyRequest().authenticated();
+        });
+        
+        // 添加JWT过滤器
+        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
         
         return http.build();
     }
@@ -96,23 +113,26 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // 允许的源
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+        // 允许所有源
+        configuration.setAllowedOriginPatterns(List.of("*"));
         
         // 允许的HTTP方法
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         
         // 允许的请求头
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         
         // 允许携带凭证
         configuration.setAllowCredentials(true);
         
-        // 预检请求的缓存时间
+        // 暴露的响应头
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        
+        // 预检请求的缓存时间（秒）
         configuration.setMaxAge(3600L);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**", configuration);
+        source.registerCorsConfiguration("/**", configuration);
         
         return source;
     }
